--- a/contact_info.html
+++ b/contact_info.html
@@ -47,11 +47,11 @@
 
   			<ul class="nav">
   				<hr>
+  				<li><a href="index.html">Home</a></li>
   				<li><a href="about_me.html">About Me</a></li>
+  				<li><a class="active" href="contact_info.html">Contact Info</a></li>
   				<li><a href="projects.html">Projects</a></li>
-  				<li><a class="active" href="index.html">Home</a></li>
   				<li><a href="resume.html">Resume</a></li>
-  				<li><a href="contact_info.html">Contact Info</a></li>
   				<hr>
 			</ul>
 			<br>
