--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="stylesheet.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title> Austin Scampini </title>
 <style>
@@ -51,7 +52,7 @@
   				<li><a href="projects.html">Projects</a></li>
   				<li><a class="active" href="index.html">Home</a></li>
   				<li><a href="resume.html">Resume</a></li>
-  				<li><a href="contact_info.html">Contact Info</a></li>
+  				<li><a href="contact_info.php">Contact Me</a></li>
   				<hr>
 			</ul>
 			<br>
@@ -83,6 +84,12 @@
 
 			</div>
 			<br><br>
+
+			<div class="row" style="background-color: #325156; color: #5a9099;">
+				<br>
+				<p>This site is powered by me and uploaded to Github <i class="fa fa-github" style="font-size:22px"></i></p>
+				<br>
+			</div>
 
 		</form>
 	</div>
