--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   				<li><a href="projects.html">Projects</a></li>
   				<li><a class="active" href="index.html">Home</a></li>
   				<li><a href="resume.html">Resume</a></li>
-  				<li><a href="contact_info.php">Contact Me</a></li>
+  				<li><a href="contact_info.html">Contact Me</a></li>
   				<hr>
 			</ul>
 			<br>
