--- a/contact_info.html
+++ b/contact_info.html
@@ -73,20 +73,22 @@ if($_POST["submit"]) {
 			</ul>
 			<br>
  
-  			<?=$thankYou ?>
+  			<form method="post" name="myemailform" action="contact_info.php">
+				<p>
+					<label for='name'>Enter Name: </label><br>
+					<input type="text" name="name">
+				</p>
+				<p>
+					<label for='email'>Enter Email Address:</label><br>
+					<input type="text" name="email">
+				</p>
+				<p>
+					<label for='message'>Enter Message:</label> <br>
+					<textarea name="message"></textarea>
+				</p>
+					<input type="submit" name='submit' value="submit">
+			</form>
 
-    			<form method="post" action="contact.php">
-        			<label>Name:</label>
-        			<input name="sender">
-
-        			<label>Email address:</label>
-        			<input name="senderEmail">
-
-        			<label>Message:</label>
-        			<textarea rows="5" cols="20" name="message"></textarea>
-
-        			<input type="submit" name="submit">
-    		</form>
 			<br><br>
 
 			<div class="row" style="background-color: #325156; color: #5a9099;">
@@ -98,5 +100,15 @@ if($_POST["submit"]) {
 		</form>
 	</div>
 </center>
+
+<script language="JavaScript">
+// Code for validating the form
+// Visit http://www.javascript-coder.com/html-form/javascript-form-validation.phtml
+// for details
+var frmvalidator  = new Validator("myemailform");
+frmvalidator.addValidation("name","req","Please provide your name"); 
+frmvalidator.addValidation("email","req","Please provide your email"); 
+frmvalidator.addValidation("email","email","Please enter a valid email address"); 
+</script>
 </body>
 </html>
