--- a/about_me.html
+++ b/about_me.html
@@ -56,16 +56,12 @@
   				<hr>
 			</ul>
 			<br>
- 
-  			<div style="text-align: left; margin-left: 10%; margin-right: 10%; font-size: 120%;">
-  				<p style=" margin-bottom: 5%;">Welcome to my about me page!</p>
 
-  				<p style="line-height: 30px; margin-bottom: 5%; width: 100%;">In order to get a feel for who I am, I suppose I should tell you a little about myself.</p>
-
-  				<p style="line-height: 30px; margin-bottom: 5%; width: 100%;">I was born and raised in South Carolina, where I attended all of my formal schooling. </p>
-
+			<div style="line-height: 30px; text-align: left; margin-left: 10%; margin-right: 10%; font-size: 120%;">
+  				<p style=" margin-bottom: 4%; width: 100%"></p>
 
 			</div>
+ 
 			<br><br>
 
 			<div class="row" style="background-color: #325156; color: #5a9099;">
