--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
 			</ul>
 			<br>
  
-  			<div style="text-align: left; margin-left: 10%; margin-right: 10%; font-size: 120%;">
-  				<p style=" margin-bottom: 4%;">Welcome to my website! This site is my attempt to keep myself busy during waiting periods while looking for a career as well as it is a great e-portfolio to present during interviews. If you happen to be looking at my web-page and think i could be a good fit for your company, feel free to check out my resume listed under the resume tab or <a href="resume.html" style="text-decoration: none; color: #3498DB;">click here.</p>
+  			<div style="line-height: 30px; text-align: left; margin-left: 10%; margin-right: 10%; font-size: 120%;">
+  				<p style=" margin-bottom: 4%; width: 100%">Welcome to my website! This site is my attempt to keep myself busy during waiting periods while looking for a career as well as it is a great e-portfolio to present during interviews. If you happen to be looking at my web-page and think i could be a good fit for your company, feel free to check out my resume listed under the resume tab or <a href="resume.html" style="text-decoration: none; color: #3498DB;">click here.</a></p>
 
-  				<p style="line-height: 30px; margin-bottom: 4%; width: 100%;">My name is <Strong>Austin Scampini</Strong> and I am a Computer Engineer. I recently just completed my Bachelor's Degree in Computer Engineering from the <a href= "https://www.sc.edu/" style="text-decoration: none; color: #3498DB;">University of South Carolina.</a> and I am in the market for a Computer Science/Engineering job in the Charleston, South Carolina area.</p>
+  				<p style="line-height: 30px; margin-bottom: 4%; width: 100%;">My name is <Strong>Austin Scampini</Strong> and I am a Computer Engineer. I recently just completed my Bachelor's Degree in Computer Engineering from the <a href= "https://www.sc.edu/" style="text-decoration: none; color: #3498DB;">University of South Carolina.</a> and I am in the market for a Computer Science/Engineering job in the Charleston, South Carolina area. I have a primarily software and hardware background in computers with a smattering of electrical engineering and embedded systems.</p>
 
 			</div>
 			<br><br>
