--- a/projects.html
+++ b/projects.html
@@ -58,7 +58,7 @@
 			<br>
  
   			<div style="text-align: left; margin-left: 10%; margin-right: 10%; font-size: 125%;">
-  				<p style="line-height: 30px; margin-bottom: 4%;">Welcome to my projects page! This page is to go into a little more explanation about some of the projects
+  				<p style="line-height: 30px; margin-bottom: 4%; width: 100%">Welcome to my projects page! This page is to go into a little more explanation about some of the projects
   				that I've done over the years. Listing and giving a brief summary on my resume is all fine and well but I don't think I can really do some of these projects justice in such few words.</p>
 
   				<p><STRONG>"InsurTix"</STRONG></p>
