--- a/contact_info.html
+++ b/contact_info.html
@@ -56,24 +56,15 @@
   				<hr>
 			</ul>
 			<br>
- 
-  			<form method="post" name="myemailform" action="contact_info.php">
-				<p>
-					<label for='name'>Enter Name: </label><br>
-					<input type="text" name="name">
-				</p>
-				<p>
-					<label for='email'>Enter Email Address:</label><br>
-					<input type="text" name="email">
-				</p>
-				<p>
-					<label for='message'>Enter Message:</label> <br>
-					<textarea name="message"></textarea>
-				</p>
-					<input type="submit" name='submit' value="submit">
-			</form>
+ 			
+ 			<div style="line-height: 30px; margin-left: 10%; margin-right: 10%; font-size: 120%;">
+  				<p style=" margin-bottom: 4%; width: 100%">If you want to get in contact will me feel free to email me at </p>
 
-			<br><br>
+  				<p style=" margin-bottom: 4%; width: 100%">austinscampini@gmail.com</p>
+
+  				<p style=" margin-bottom: 4%; width: 100%">and i will get back to you as quickly as possible!</p>
+
+			</div>
 
 			<div class="row" style="background-color: #325156; color: #5a9099;">
 				<br>
@@ -85,14 +76,5 @@
 	</div>
 </center>
 
-<script language="JavaScript">
-// Code for validating the form
-// Visit http://www.javascript-coder.com/html-form/javascript-form-validation.phtml
-// for details
-var frmvalidator  = new Validator("myemailform");
-frmvalidator.addValidation("name","req","Please provide your name"); 
-frmvalidator.addValidation("email","req","Please provide your email"); 
-frmvalidator.addValidation("email","email","Please enter a valid email address"); 
-</script>
 </body>
 </html>
